fix: Gave buttons more spacing and more streamline sizes

--- a/css/style.css
+++ b/css/style.css
@@ -98,13 +98,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 10px;
 }
 
-.checkboxes {
-  margin-top: 10px;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .load {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -112,6 +105,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 ul {
   list-style-type: none;
+  padding: 0;
 }
 
 li {
@@ -119,17 +113,11 @@ li {
   display: inline;
 }
 
+
 .item {
   width: 80%;
   margin: 0 auto;
   margin-top: 15px;
-}
-
-.printBtn {
-  position: fixed;
-  top: 5px;
-  right: 0;
-  z-index: 4;
 }
 
 .clean-gray-btn {
@@ -174,13 +162,26 @@ li {
 }
 
 .clean-gray-btn-shop {
-  font: bold 15px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  font: bold 12px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  height: 30px;
 }
 
 .clean-gray-btn-increment {
   width: 25px;
   height: 25px;
   margin-left: 5px;
+}
+
+.customerList {
+  width: 90%;
+  margin: 5px auto;
+}
+
+.printBtn {
+  position: fixed;
+  top: 5px;
+  right: 0;
+  z-index: 4;
 }
 
 table {
@@ -266,7 +267,7 @@ table, th, td {
   .white {
     background-color: white;
     width: 100%;
-    height: 130px;
+    height: 150px;
     top: 0;
     right: 20%;
     position: fixed;
@@ -299,16 +300,19 @@ table, th, td {
     margin-right: auto;
   }
 
+  .customerList {
+    width: 140px;
+  }
+
+  .clean-gray-btn-shop {
+    width: 150px;
+  }
+
   .shopList {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-  }
-
-  .checkboxes {
-    position: relative;
-    left: 20px;
-    width: 25%;
+    margin-left: 50px;
   }
 
   #checkout {
